# studienprojekt-routing

./: .directory  .gitignore  CMakeLists.txt  Doxyfile.in  README  gui.html  style.css
cmake/Modules/: .directory  FindQuazip.cmake  FindQwt.cmake  FindZZIP.cmake
data/: .directory  bochum_city.osm  bochum_city.pbf  rub.pbf
gui/: gui.html  gui2.html  krimskrams.html  route.gpx  style.css
src/: .directory  main.cpp  main.hpp  programoptions.cpp  programoptions.hpp  tests.cpp  tests.hpp
src/DataPrimitives/: DataPrimitiveDefines.hpp  gpsposition.cpp  gpsposition.hpp  gpsroute.cpp  gpsroute.hpp  osmnode.hpp  osmproperty.hpp  osmrelation.hpp  osmway.hpp
src/database/: .directory  altitudeprovider.cpp  altitudeprovider.hpp  blockingqueue.cpp  blockingqueue.hpp  database.cpp  database.hpp  databaseramcache.cpp  databaseramcache.hpp  ramdatabase.cpp  ramdatabase.hpp  spacefillingcurves.cpp  spacefillingcurves.hpp  spatialitedatabase.cpp  spatialitedatabase.hpp  sqlite_functions.cpp  sqlite_functions.hpp  sqlitedatabase.cpp  sqlitedatabase.hpp  srtmprovider.cpp  srtmprovider.hpp  temporarydatabase.cpp  temporarydatabase.hpp  zip.cpp  zip.hpp
src/database/parser/: .directory  osmparser.cpp  osmparser.hpp  pbfparser.cpp  pbfparser.hpp
src/database/parser/pbf/: .directory
src/dataprimitives/: .directory  bintrie.cpp  bintrie.hpp  bloomfilter.cpp  bloomfilter.hpp  gpsposition.cpp  gpsposition.hpp  gpsroute.cpp  gpsroute.hpp  osmedge.cpp  osmedge.hpp  osmnode.cpp  osmnode.hpp  osmproperty.cpp  osmproperty.hpp  osmrelation.cpp  osmrelation.hpp  osmturnrestriction.cpp  osmturnrestriction.hpp  osmway.cpp  osmway.hpp  rangetree.cpp  rangetree.hpp  routingedge.cpp  routingedge.hpp  routingnode.cpp  routingnode.hpp
src/network/: .directory  filedownloader.cpp  filedownloader.hpp  webserver.cpp  webserver.hpp
src/preprocessing/: .directory  datapreprocessing.cpp  datapreprocessing.hpp  edgecategorizer.cpp  edgecategorizer.hpp  simpledatapreprocessing.cpp  simpledatapreprocessing.hpp
src/routing/: .directory  astar.cpp  astar.hpp  closedlist.cpp  closedlist.hpp  dijkstra-stern.cpp  dijkstra.cpp  dijkstra.hpp  heap.cpp  heap.hpp  potentialfunction.cpp  potentialfunction.hpp  router.cpp  router.hpp  routingmetric.cpp  routingmetric.hpp
